# CriminAI

./: .env.example  .gitignore  Makefile  README.md  faking_drawing.py  pyproject.toml  test_gradium_tts.py
frontend/: App.tsx  README.md  env.d.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
frontend/components/: BinaryBackground.tsx  DetectiveAvatar.tsx  FinalRender.tsx  SketchReveal.tsx
frontend/services/: audioPlayerService.ts  audioService.ts  backendService.ts  imageStages.ts  mockBackend.ts
scripts/: start_services.sh  start_stt.sh  start_tts.sh
src/: audio_websocket_server.py  forensic_artist_handler.py  gemini_openai_server.py  gradium_stt.py  gradium_tts.py  image_gen.py  kyutai_stt.py  kyutai_tts.py  stt_service.py  text_artist.py  text_websocket_server.py  tts_service.py  vad.py  websocket_server.py
