[project]
name = "prep-first-hackaton-ever"
version = "0.1.0"
description = "AI Forensic Sketch Artist with real-time voice interaction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "dotenv>=0.9.9",
    "fal-client>=0.10.0",
    "fastapi>=0.115.0",
    "google-genai>=1.16.0",
    "google-generativeai>=0.8.5",
    "librosa>=0.11.0",
    "msgpack>=1.0.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.13.1",
    "streamlit>=1.52.1",
    "transformers>=4.57.3",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
]
